--- a/App.config
+++ b/App.config
@@ -3,13 +3,8 @@
     <configSections>
     </configSections>
     <connectionStrings>
-        <add name="ist.Properties.Settings.dayanaConnectionString" connectionString="Data Source=DAYANAALFARES\SQLEXPRESS01;Initial Catalog=dayana;Integrated Security=True"
-            providerName="System.Data.SqlClient" />
-        <add name="ist.Properties.Settings.DB_bilgisayarConnectionString"
-            connectionString="Data Source=DAYANAALFARES\SQLEXPRESS01;Initial Catalog=DB_bilgisayar;Integrated Security=True"
-            providerName="System.Data.SqlClient" />
-        <add name="ist.Properties.Settings.dayana_istConnectionString"
-            connectionString="Data Source=DAYANAALFARES\SQLEXPRESS01;Initial Catalog=&quot;dayana ist&quot;;Integrated Security=True"
+        <add name="computer_pro.Properties.Settings.db_loptoConnectionString"
+            connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\db_lopto.mdf;Integrated Security=True"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
