--- a/computer_pro.csproj
+++ b/computer_pro.csproj
@@ -106,6 +106,18 @@
     <Compile Include="homepage.Designer.cs">
       <DependentUpon>homepage.cs</DependentUpon>
     </Compile>
+    <Compile Include="hp.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="hp.Designer.cs">
+      <DependentUpon>hp.cs</DependentUpon>
+    </Compile>
+    <Compile Include="mac.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="mac.Designer.cs">
+      <DependentUpon>mac.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="asus.resx">
@@ -119,6 +131,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="homepage.resx">
       <DependentUpon>homepage.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="hp.resx">
+      <DependentUpon>hp.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="mac.resx">
+      <DependentUpon>mac.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
